# heterogen_soc_hf

./: .gitignore  CMakeLists.txt  Makefile  README.md
cpu_opencl/: CMakeLists.txt
cpu_opencl/include/: median_img_ocl.h  opencl_kernels.h
cpu_opencl/src/: median2d_kernel_gl.cl  median2d_kernel_sh_uchar_float.cl  median2d_kernel_sh_uchar_int.cl  median2d_kernel_sh_uchar_uchar.cl  median_img_avx.cpp  median_img_main.cpp  median_img_neon.cpp  median_img_ocl.cpp  timestamp.cpp
fpga_hls/constraints/: hdmi_top.xdc
fpga_hls/rtl/: hdmi_rx.edn  hdmi_top.v  hdmi_tx.edn
fpga_hls/scripts/: run_hls.tcl  run_vivado.tcl
fpga_hls/src/: median.cpp  median_tb.cpp  types.h
fpga_hls/tb/: median_tb.cpp
fpga_hls/xdc/: hdmi_top.xdc
src/: fir_img_avx.cpp  fir_img_c.cpp  fir_img_main.cpp  fir_img_neon.cpp  generate_cmp_pairs.cpp  median2d_kernel_gl.cl  median2d_kernel_sh_uchar_float.cl  median2d_kernel_sh_uchar_int.cl  median_img_main.cpp  median_img_ocl.cpp  median_img_ocl.h  opencl_kernels.h  timestamp.h
